<resources>
    <string name="app_name">Note App</string>
    <string name="submit" />
    <string name="app_label">SimpleNoteApp</string>
    <string name="addnotes">addNotes</string>
    <string name="makenotes">makeNotes</string>
    <string name="make_notes">make_notes</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_back_arrow">Note_back_arrow</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes sub Title</string>
    <string name="notes_desc">Description</string>
    <string name="note_icon">Note_icon</string>
    <string name="search_your_notes">search your notes</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="web_url">web_url</string>
    <string name="http">http://</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="add_image">Add Image</string>
    <string name="pick_color">Pick Color</string>
    <string name="note_description">note description</string>
    <string name="todo">TODO</string>
    <string name="search_hint">Search</string>
    <string name="add_notes">Add notes</string>
    <string name="search">search</string>
    <string name="searcher">Search</string>
    <string name="notes">Notes</string>
</resources>